# smart-home-monitor

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mqtt_samples.txt  pyproject.toml
app/: api.py  config.py  database.py  models.py  mqtt_client.py  schemas.py
simulators/: simulated_sensors.py
static/: index.html
